# mon-14-40-task3-PawelKepka

./: README.md  names.txt  pyproject.toml  task.py
